Fix arrows on iOS

--- a/components/Pricing/Pricing.module.scss
+++ b/components/Pricing/Pricing.module.scss
@@ -287,6 +287,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 8px;
   transition-duration: 0.2s;
   transition-property: transform;
 }
